# Assignment3

./: README.md  test.py
Data Scrape Stream/: .env  .gitignore  pyproject.toml
Data Scrape Stream/Airflow/: Cover-from-igcc-summary-edition-2022-2.jpg?w=160&hash=DC1089441006134044E6C1F6ACA28021  airflow.cfg  cover-investment-horizon.jpg?w=160&hash=8AE2D229908591C76BAEB88E604ED803  cover-private-equity.jpg?w=160&hash=25105576E65F0E0137BDD119FADF1385  docker-compose.yaml  scrape_S3.py  scrape_snowflake.py
Data Scrape Stream/Airflow/dags/: scrape_Image_Pdf_To_S3.py  scrapingTo SnowflakeDag.py  scrapingToSnowflakeDag.py
Data Scrape Stream/Airflow/db_data/base/16384/: pg_internal.init
Data Scrape Stream/Airflow/db_data/global/: pg_control  pg_internal.init
Data Scrape Stream/Airflow/db_data/pg_stat/: db_0.stat  db_16384.stat  global.stat
Data Scrape Stream/Airflow/pdfs/: RFReview18  RFReview19
Data Scrape Stream/Api/: .env  jwtauth.py  main.py  pdf_routes.py  rag_model.py  summarizer_model.py
Data Scrape Stream/Api/Summary/: generate_summary.py
Data Scrape Stream/Streamlit/: application.py  main.py
Data_Scrape_Stream/: .env  requirements.txt
Data_Scrape_Stream/Api/: Fastapi_app.py  test_snowflake_connection.py
Data_Scrape_Stream/Streamlit/: app.py  app_webpage.py
